# variational-depth-from-focus

./: .gitignore  CMakeLists.txt  README.md  align.sh
include/: CPUTimer.h  CUDATimer.h  DataPreparator.cuh  DataPreparatorTensor3f.cuh  FCT.cuh  LaplaceInversion.cuh  LayeredMemory.cuh  LinearizedADMM.cuh  Parameters.h  Tensor3f.cuh  common_kernels.cuh  cudaWrappers.h  helper.h  id.h  loading.h  openCVHelpers.h  utils.cuh  wintime.h
samples/: sweep_focus_10-200percent.json  sweep_focus_8-100cm.json
src/: CPUTimer.cpp  CUDATimer.cpp  DataPreparator.cu  DataPreparatorTensor3f.cu  FCT.cu  LaplaceInversion.cu  LayeredMemory.cu  LinearizedADMM.cu  Tensor3f.cu  common_kernels.cu  compare.cpp  compress.cpp  cudaWrappers.cu  helper.cu  main.cu  openCVHelpers.cpp  utils.cu  vdff.cu  wintime.cpp
